Avoid row-gap-8

--- a/resources/authgear/static/authgear.css
+++ b/resources/authgear/static/authgear.css
@@ -171,10 +171,6 @@ h1, h2, h3, h4, h5, h6 {
   row-gap: 4px;
 }
 
-.row-gap-8 {
-  row-gap: 8px;
-}
-
 .margin-0 {
   margin: 0;
 }
